<resources>
    <string name="app_name">Billfold</string>

    <!-- Reoccuring Strings -->
    <string-array name="frequency_array">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>


    <!-- Menu Strings -->
    <string name="action_home">Home</string>
    <string name="action_bills">Bills</string>
    <string name="action_people">People</string>
    <string name="action_settings">Settings</string>

    <string name="clearBills">Clear all data in database</string>
    <string name="clearBillsBtn">Clear Database</string>

    <string name="testData">Populate the database with sample data</string>
    <string name="testDataBtn">Populate</string>
</resources>
