<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_home" />
    <item
        android:id="@+id/action_bills"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_bills"
        android:onClick="billsClickHandler"/>
    <item
        android:id="@+id/action_people"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_people" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
